--- a/www/cadastrar.html
+++ b/www/cadastrar.html
@@ -17,7 +17,7 @@
     <title>Login</title>
 </head>
 <body>
-<script src="components/loom.js"></script>
+<script src="javascript/app.js"></script>
  <section class="header">
    <div>
     <img src="img/logo.png" alt="LOGO ESTACIONAMENTO">
@@ -26,15 +26,14 @@
  </section>
 
  <section class="main">
-    <div class="login">
+    <div class="cad">
         <form action="">
-            <label id="title">LOGIN</label> <br>
-            <!--<input type="text" name="CPF" placeholder="Digite seu CPF" required> <br>
-            <input type="password" name="senha" placeholder="Digite sua senha" required> <br>-->
-            <button type="submit" id="btn" onclick="Login(event)">ENTRAR</button>
+            <label id="title">CADASTRO</label> <br>
+            <input type="text" name="CPF" placeholder="DIGITE SEU CPF" required> <br>
+            <input type="password" name="senha" placeholder="CRIE SUA SENHA" required> <br>
+            <input type="submit" value="CADASTRAR" id="btn" onclick="Cad(event)">
         </form>
 
-        <a href="cadastrar.html"> <p> CADASTRAR-SE </p></a>
     </div>
  </section>
 </body>
