--- a/www/home.html
+++ b/www/home.html
@@ -21,20 +21,14 @@
  <section class="header">
    <div>
     <img src="img/logo.png" alt="LOGO ESTACIONAMENTO">
-    <p>ESTACIONAMENTO <br> <span class="second"> DIGITAL </span> <p>
+    <h1>HOME</h1>
    </div>
  </section>
 
  <section class="main">
-    <div class="login">
-        <form action="">
-            <label id="title">LOGIN</label> <br>
-            <!--<input type="text" name="CPF" placeholder="Digite seu CPF" required> <br>
-            <input type="password" name="senha" placeholder="Digite sua senha" required> <br>-->
-            <button type="submit" id="btn" onclick="Login(event)">ENTRAR</button>
-        </form>
-
-        <a href="cadastrar.html"> <p> CADASTRAR-SE </p></a>
+    <div class="home">
+        <a href="tabela.html"><h3>Tabela</h3></a>
+        <a href="calculo.html"><h3>Cálculo</h3></a>
     </div>
  </section>
 </body>
