--- a/www/home.html
+++ b/www/home.html
@@ -1,35 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&display=swap" rel="stylesheet">
+    <script src="components/loader.js"></script>
+    <script src"bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <link rel="stylesheet" href="components/loader.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Login</title>
+    <title>Varmeiras</title>
 </head>
 <body>
-<script src="components/loom.js"></script>
- <section class="header">
-   <div>
-    <img src="img/logo.png" alt="LOGO ESTACIONAMENTO">
-    <h1>HOME</h1>
-   </div>
- </section>
+<script src"components/loom.js"></script>
+    <section class="header">
+        <div>
+            <img src="img/logo.png" alt="LOGO ESTACIONAMENTO">
+            <p>ESTACIONAMENTO <br> <span class="second"> DIGITAL </span><p>
+        </div>
+    </section>
 
- <section class="main">
-    <div class="home">
-        <a href="tabela.html"><h3>Tabela</h3></a>
-        <a href="calculo.html"><h3>Cálculo</h3></a>
-    </div>
- </section>
+    <section class="main">
+        <div class="home">
+        <h2>TABELA DE PREÇOS</h2> <br>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Categoria</th>
+                    <th scope="col">Taxa por hora</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">Subcompacto</th>
+                    <td>R$ 3.50</td>
+                </tr>
+                <tr>
+                    <th scope="row">Compacto</th>
+                    <td>R$ 4.00</td>
+                </tr>
+                <tr>
+                    <th scope="row">Hatch</th>
+                    <td>R$ 4.50</td>
+                </tr>
+                <tr>
+                    <th scope="row">Sedan</th>
+                    <td>R$ 5.00</td>
+                </tr>
+                <tr>
+                    <th scope="row">SUV</th>
+                    <td>R$ 6.00</td>
+                </tr>
+                <tr>
+                    <th scope="row">Pick-up</th>
+                    <td>R$ 7.00</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <div class="row justify-content-center">
+            <a class="btn btn-outline" href="calculo.html" role="button">Ir à calculadora</a>
+        </div>
+        </div>
+    </section>
 </body>
 </html>
