--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <title>Login</title>
 </head>
 <body>
+<!--Participantes: Ana Sá, Beatriz, Bernardo Rian-->
 <script src="components/loom.js"></script>
  <section class="header">
    <div>
